# rest-rust

./: .gitignore  Cargo.toml
scripts/: city.sql  county.sql  file.sql  province.sql  town.sql
src/: main.rs
src/common/: mod.rs  snow_flake.rs
src/config/: db_config.rs  mod.rs  server_config.rs
src/mapper/: file_mapper.rs  mod.rs  region_mapper.rs
src/model/: file_model.rs  mod.rs  region_model.rs
src/route/: file_route.rs  mod.rs  region_route.rs
src/service/: file_service.rs  mod.rs  region_service.rs
src/util/: mod.rs  string_util.rs  time_util.rs
