

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 16  # Note: ignored because `incremental` is enabled.
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[package]
name = "rest-rust"
version = "0.1.0"
authors = ["zhangyebai <zhangyebai@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
actix-http = "2.0.0"
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.58"
log4rs = "0.13.0"
log = "0.4.11"
fast_log = "1.2.3"
rand = "0.7.3"
chrono = { version = "0.4", features = ["serde"] }
#sqlx = { version = "0.3", default-features = false, features = [ "runtime-tokio", "macros", "mysql"] }
async-std = { version = "1.6", features = ["attributes"] }
tokio = {version = "0.2.22", features = ["full"]}
#mysql_async = "0.25.0"
rbatis-core = { version = "1.6.2", default-features = false, features = ["all"]}
rbatis =  { version = "1.6.2" }
rbatis-macro-driver = { version = "1.6.2" }

clap = "2.33.3"

failure = "0.1.8"